--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -15,8 +15,9 @@ jobs:
       uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.7
-        python-version: 3.9
+        python-version: 3.8
+    - uses: actions/setup-python@v2
+      with:
         python-version: 3.8
     - name: Check version
       run: |
