--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -1,24 +1,29 @@
-name: a
+name: Fast-forward
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types: [labeled]
 
 jobs:
-  setup-build-deploy:
-    name: pulumi
+  fast_forward:
+    name: Fast-forward
     runs-on: ubuntu-latest
+    if: github.event.label.name == 'fast-forward'
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install pulumi
-      run: |
-        curl -fsSL https://get.pulumi.com | sh
-    - run: |
-        PATH="/home/runner/.pulumi/bin:$PATH"
-        pulumi version
+      - name: print
+        run: echo ${{ github.base_ref }} ${{ github.head_ref }}
+
+      - name: Checkout pull request
+        uses: actions/checkout@v3
+        with:
+          token: ${{ steps.generate-token.outputs.token }}
+          fetch-depth: 0
+
+      - name: Fast-forward & push
+        env:
+          PR_COMMIT: ${{ github.event.pull_request.head.sha }}
+        run: |
+          git checkout main
+          git merge --ff-only "$PR_COMMIT"
+          git push origin main
