--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types: [labeled]
 
+permissions: write-all
+
 jobs:
   fast_forward:
     name: Fast-forward
@@ -12,7 +14,7 @@ jobs:
 
     steps:
       - name: print
-        run: echo ${{ github.base_ref }} ${{ github.head_ref }}
+        run: echo ${{ github.base_ref }} <- ${{ github.head_ref }}
 
       - name: Checkout pull request
         uses: actions/checkout@v3
@@ -24,6 +26,6 @@ jobs:
         env:
           PR_COMMIT: ${{ github.event.pull_request.head.sha }}
         run: |
-          git checkout main
+          git checkout ${{ github.base_ref }}
           git merge --ff-only "$PR_COMMIT"
-          git push origin main
+          git push origin ${{ github.base_ref }}
